--- a/pom.xml
+++ b/pom.xml
@@ -780,7 +780,7 @@
         <carbon.metrics.version>1.2.2</carbon.metrics.version>
         <!--<carbon.ml.version>1.1.1</carbon.ml.version>-->
         <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
-        <carbon.event-processing.version>2.1.6</carbon.event-processing.version>
+        <carbon.event-processing.version>2.1.9-SNAPSHOT</carbon.event-processing.version>
         <siddhi.version>3.1.2</siddhi.version>
         <cep.version>4.2.1-SNAPSHOT</cep.version>
         <test.framework.version>4.4.2</test.framework.version>
